build5.log
Calculating task graph as configuration cache cannot be reused because file 'build.gradle.kts' has changed.
> Task :batch-rest-repository:processResources UP-TO-DATE
> Task :batch-skip-step:processResources UP-TO-DATE
> Task :batch-skip-step:compileJava UP-TO-DATE
> Task :batch-rest-repository:compileJava UP-TO-DATE
> Task :batch-skip-step:classes UP-TO-DATE
> Task :batch-rest-repository:classes UP-TO-DATE
> Task :batch-skip-step:jar UP-TO-DATE
> Task :batch-rest-repository:jar UP-TO-DATE
> Task :cloud-jdbc-env-repo:processResources UP-TO-DATE
> Task :data-domain-events:compileJava UP-TO-DATE
> Task :data-domain-events:processResources UP-TO-DATE
> Task :data-domain-events:classes UP-TO-DATE
> Task :data-domain-events:jar UP-TO-DATE
> Task :data-envers-audit:processResources UP-TO-DATE
> Task :data-jdbc-audit:processResources UP-TO-DATE
> Task :data-envers-audit:compileJava UP-TO-DATE
> Task :data-envers-audit:classes UP-TO-DATE
> Task :data-envers-audit:jar UP-TO-DATE
> Task :data-jdbc-audit:compileJava UP-TO-DATE
> Task :data-jdbc-audit:classes UP-TO-DATE
> Task :data-jdbc-audit:jar UP-TO-DATE
> Task :cloud-jdbc-env-repo:compileJava UP-TO-DATE
> Task :data-jdbc-schema-generation:processResources UP-TO-DATE
> Task :cloud-jdbc-env-repo:classes UP-TO-DATE
> Task :data-jpa-audit:processResources UP-TO-DATE
> Task :cloud-jdbc-env-repo:jar UP-TO-DATE
> Task :data-jdbc-schema-generation:compileJava UP-TO-DATE
> Task :data-jpa-event:processResources UP-TO-DATE
> Task :data-jdbc-schema-generation:classes UP-TO-DATE
> Task :data-jdbc-schema-generation:jar UP-TO-DATE
> Task :data-jpa-audit:compileJava UP-TO-DATE
> Task :data-jpa-audit:classes UP-TO-DATE
> Task :data-jpa-filtered-query:processResources UP-TO-DATE
> Task :data-jpa-event:compileJava UP-TO-DATE
> Task :data-jpa-event:classes UP-TO-DATE
> Task :data-jpa-event:jar UP-TO-DATE
> Task :data-jpa-audit:jar UP-TO-DATE
> Task :data-jpa-hibernate-cache:processResources UP-TO-DATE
> Task :data-mongodb-audit:processResources UP-TO-DATE
> Task :data-mongodb-audit:compileJava UP-TO-DATE
> Task :data-mongodb-audit:classes UP-TO-DATE
> Task :data-mongodb-audit:jar UP-TO-DATE
> Task :data-mongodb-full-text-search:processResources UP-TO-DATE
> Task :data-jpa-hibernate-cache:compileJava UP-TO-DATE
> Task :data-jpa-hibernate-cache:classes UP-TO-DATE
> Task :data-jpa-hibernate-cache:jar UP-TO-DATE
> Task :data-mongodb-tc-data-load:processResources UP-TO-DATE
> Task :data-mongodb-tc-data-load:compileJava UP-TO-DATE
> Task :data-mongodb-tc-data-load:classes UP-TO-DATE
> Task :data-mongodb-tc-data-load:jar UP-TO-DATE
> Task :data-mongodb-transactional:compileJava UP-TO-DATE
> Task :data-mongodb-transactional:processResources UP-TO-DATE
> Task :data-mongodb-transactional:classes UP-TO-DATE
> Task :data-mongodb-transactional:jar UP-TO-DATE
> Task :data-redis-cache:processResources UP-TO-DATE
> Task :data-redis-cache:compileJava UP-TO-DATE
> Task :data-redis-cache:classes UP-TO-DATE
> Task :data-redis-cache:jar UP-TO-DATE
> Task :data-repository-definition:compileJava UP-TO-DATE
> Task :data-repository-definition:processResources UP-TO-DATE
> Task :data-repository-definition:classes UP-TO-DATE
> Task :data-repository-definition:jar UP-TO-DATE
> Task :data-rest-composite-id:processResources UP-TO-DATE
> Task :data-rest-composite-id:compileJava UP-TO-DATE
> Task :data-rest-composite-id:classes UP-TO-DATE
> Task :data-rest-composite-id:jar UP-TO-DATE
> Task :data-rest-validation:processResources UP-TO-DATE
> Task :data-rest-validation:compileJava UP-TO-DATE
> Task :data-rest-validation:classes UP-TO-DATE
> Task :data-rest-validation:jar UP-TO-DATE
> Task :graphql:compileJava UP-TO-DATE
> Task :graphql:processResources UP-TO-DATE
> Task :graphql:classes UP-TO-DATE
> Task :graphql:jar UP-TO-DATE
> Task :jooq:processResources UP-TO-DATE
> Task :modulith:compileJava UP-TO-DATE
> Task :modulith:processResources UP-TO-DATE
> Task :modulith:classes UP-TO-DATE
> Task :modulith:jar UP-TO-DATE
> Task :test-execution-listeners:compileJava UP-TO-DATE
> Task :test-execution-listeners:processResources UP-TO-DATE
> Task :test-execution-listeners:classes UP-TO-DATE
> Task :test-execution-listeners:jar UP-TO-DATE
> Task :test-rest-assured:compileJava UP-TO-DATE
> Task :test-rest-assured:processResources UP-TO-DATE
> Task :test-rest-assured:classes UP-TO-DATE
> Task :test-rest-assured:jar UP-TO-DATE
> Task :test-slice-tests-rest:compileJava UP-TO-DATE
> Task :test-slice-tests-rest:processResources UP-TO-DATE
> Task :test-slice-tests-rest:classes UP-TO-DATE
> Task :test-slice-tests-rest:jar UP-TO-DATE
> Task :web-rest-client:compileJava UP-TO-DATE
> Task :web-rest-client:processResources UP-TO-DATE
> Task :web-rest-client:classes UP-TO-DATE
> Task :web-rest-client:jar UP-TO-DATE
> Task :web-thymeleaf-xss:compileJava UP-TO-DATE
> Task :web-thymeleaf-xss:processResources UP-TO-DATE
> Task :web-thymeleaf-xss:classes UP-TO-DATE
> Task :web-thymeleaf-xss:jar UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :processTestResources NO-SOURCE
> Task :batch-rest-repository:resolveMainClassName UP-TO-DATE
> Task :batch-rest-repository:bootJar UP-TO-DATE

> Task :jooq:compileJava FAILED
/app/jooq/src/main/java/zin/rashidi/boot/jooq/user/UserJooqRepository.java:8: error: cannot find symbol
import static zin.rashidi.boot.jooq.Tables.USERS;
                                   ^
  symbol:   class Tables
  location: package zin.rashidi.boot.jooq
/app/jooq/src/main/java/zin/rashidi/boot/jooq/user/UserJooqRepository.java:8: error: static import only from classes and interfaces
import static zin.rashidi.boot.jooq.Tables.USERS;
^
/app/jooq/src/main/java/zin/rashidi/boot/jooq/user/UserJooqRepository.java:24: error: cannot find symbol
        return dsl.selectFrom(USERS).where(USERS.USERNAME.eq(username))
                              ^
  symbol:   variable USERS
  location: class UserJooqRepository
/app/jooq/src/main/java/zin/rashidi/boot/jooq/user/UserJooqRepository.java:24: error: package USERS does not exist
        return dsl.selectFrom(USERS).where(USERS.USERNAME.eq(username))
                                                ^
4 errors

> Task :data-mongodb-full-text-search:compileJava
> Task :data-jpa-filtered-query:compileJava
> Task :batch-rest-repository:compileTestJava

[Incubating] Problems report is available at: file:///app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':jooq:compileJava'.
> Compilation failed; see the compiler output below.
  /app/jooq/src/main/java/zin/rashidi/boot/jooq/user/UserJooqRepository.java:8: error: static import only from classes and interfaces
  import static zin.rashidi.boot.jooq.Tables.USERS;
  ^
  /app/jooq/src/main/java/zin/rashidi/boot/jooq/user/UserJooqRepository.java:8: error: cannot find symbol
  import static zin.rashidi.boot.jooq.Tables.USERS;
                                     ^
    symbol:   class Tables
    location: package zin.rashidi.boot.jooq
  /app/jooq/src/main/java/zin/rashidi/boot/jooq/user/UserJooqRepository.java:24: error: cannot find symbol
          return dsl.selectFrom(USERS).where(USERS.USERNAME.eq(username))
                                ^
    symbol:   variable USERS
    location: class UserJooqRepository
  /app/jooq/src/main/java/zin/rashidi/boot/jooq/user/UserJooqRepository.java:24: error: package USERS does not exist
          return dsl.selectFrom(USERS).where(USERS.USERNAME.eq(username))
                                                  ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 39s
81 actionable tasks: 4 executed, 77 up-to-date
Configuration cache entry stored.
